byobu (5.84) unreleased; urgency=medium

  * usr/lib/byobu/include/dirs.in:
    - make the custom scripts bin dir
  * usr/lib/byobu/custom:
    - ensure we clear the cache for custom scripts

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sat, 26 Jul 2014 16:13:23 -0500

byobu (5.83-0ubuntu1) utopic; urgency=medium

  [ Dustin Kirkland ]
  * usr/bin/byobu-config.in: LP: #1316050
    - hard code LANG=C before launching byobu-config
  * usr/lib/byobu/include/dirs.in: LP: #1346869
    - be little smarter about detecting a usable /dev/shm
  * === added directory usr/share/appdata,
    usr/share/appdata/byobu.appdata.xml: LP: #1322556
  * usr/share/byobu/profiles/tmuxrc: LP: #1315204
    - fix a couple of spots that should use $BYOBU_CONFIG_DIR
  * usr/lib/byobu/apport: LP: #1308696
    - clear out the apport cache files, to detect when the crashes
      have been cleared

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sat, 26 Jul 2014 16:13:20 -0500

byobu (5.82-0ubuntu1) utopic; urgency=medium

  * usr/bin/byobu-ctrl-a.in:
    - add bindkey line back, this line is *essential*; there was a
      syntax error in it previously, but removing the line was not
      the correct fix for LP: #1313209, #814172

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 22 Jul 2014 07:21:54 -0700

byobu (5.81-0ubuntu1) utopic; urgency=medium

  * usr/bin/byobu-enable.in, usr/share/man/man1/byobu-enable.1:
    - no need to launch byobu in byobu-enable (no idea why I did it
      that way originally)
  * debian/control, usr/bin/ctail, usr/share/man/man1/ctail.1:
    - move the ctail command over to byobu, from bikeshed
    - ctail will tail and colorize log files
  * debian/control, usr/bin/wifi-status, usr/share/man/man1/wifi-
    status.1:
    - move the wifi-status command to byobu, from bikeshed
    - fantastic demonstration of byobu split screens
  * debian/links, usr/bin/col1, usr/share/man/man1/col1.1:
    - move the col1..col9 utilities over from bikeshed